[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/General/Shadows/circle shadow small.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Rendering/DepthTestCharacterSprite.gd" type="Script" id=2]
[ext_resource path="res://NPC/Puzzle Pier/Puzzle Pier NPC 1.png" type="Texture" id=3]
[ext_resource path="res://NPC/NPC_MotionRoot.gd" type="Script" id=4]
[ext_resource path="res://NPC/NPC_ShadowAreaCheck.gd" type="Script" id=5]
[ext_resource path="res://Objects/Collision/CollidableBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://NPC/Test.gd" type="Script" id=7]

[sub_resource type="CapsuleShape2D" id=175]

[sub_resource type="CircleShape2D" id=172]
radius = 1.0

[sub_resource type="Animation" id=173]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BodyVisualRoot/NPC:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 39 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../ShadowYSort/ShadowVisualRoot/ShadowCircle:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, 0 ) ]
}

[sub_resource type="Animation" id=174]
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodyVisualRoot/NPC:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 39, 40, 39, 41 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../ShadowYSort/ShadowVisualRoot/ShadowCircle:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 3, 0 ), Vector2( 2, 1 ), Vector2( 3, 0 ), Vector2( 2, 0 ) ]
}

[node name="Peter" type="YSort"]
script = ExtResource( 7 )

[node name="MotionRoot" type="KinematicBody2D" parent="."]
collision_mask = 2
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MotionRoot"]
position = Vector2( 2, -4 )
scale = Vector2( 1.89327, 0.791018 )
shape = SubResource( 175 )
disabled = true

[node name="ShadowAreaCheck" type="Area2D" parent="MotionRoot"]
script = ExtResource( 5 )

[node name="ShadowCheck" type="CollisionShape2D" parent="MotionRoot/ShadowAreaCheck"]
shape = SubResource( 172 )

[node name="ShadowYSort" type="Node2D" parent="."]

[node name="ShadowVisualRoot" type="Node2D" parent="ShadowYSort"]

[node name="ShadowCircle" type="Sprite" parent="ShadowYSort/ShadowVisualRoot"]
position = Vector2( 3, 0 )
texture = ExtResource( 1 )
script = ExtResource( 2 )
alpha_clip = 0.01
depth_test_offset = Vector2( 0, -20 )
use_dithering = false
use_dither_blending = false

[node name="BodyYSort" type="Node2D" parent="."]

[node name="BodyVisualRoot" type="Node2D" parent="BodyYSort"]

[node name="NPC" type="Sprite" parent="BodyYSort/BodyVisualRoot"]
position = Vector2( 5, -34 )
scale = Vector2( 1.12, 1.13 )
texture = ExtResource( 3 )
hframes = 6
vframes = 10
frame = 39
script = ExtResource( 2 )
alpha_clip = 0.1
depth_test_offset = Vector2( -8, 33 )
feet_height = 10.0
use_dithering = false
use_dither_blending = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="BodyYSort"]
autoplay = "idle"
playback_speed = 0.35
anims/RESET = SubResource( 173 )
anims/idle = SubResource( 174 )

[node name="CollidableBox" parent="." instance=ExtResource( 6 )]
modulate = Color( 0.988235, 0.988235, 0.992157, 1 )
position = Vector2( 11, 5 )
tile_size = Vector2( 69, 22 )
grid_size = Vector2( 0.9, 0.5 )
texture_scale = Vector2( 1.15, 1.12 )
texture_offset = Vector2( 6, 13 )
height = 90.0
preview_collision_box = false
animation_hframes = 9
animation_vframes = 3
animation_frame = 6
use_transparency = true
always_update = true
